--- a/app/src/main/res/layout/activity_xplace_holder_test.xml
+++ b/app/src/main/res/layout/activity_xplace_holder_test.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,11 +10,10 @@
         android:id="@+id/textview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="加载成功状态，点击切换"
-        android:layout_marginTop="10dp"
+        android:text="Load Success!\nPress to change state"
         android:gravity="center"
         android:background="#0aa"
-
+        android:textSize="20dp"
         />
 
 
