--- a/app/src/main/res/layout/activity_xplace_holder_xml.xml
+++ b/app/src/main/res/layout/activity_xplace_holder_xml.xml
@@ -11,7 +11,7 @@
         android:id="@+id/placeHolderLayout"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:background="@color/colorAccent"
+        android:background="#0aa"
         app:layout_constraintTop_toTopOf="parent"
         />
 
@@ -19,7 +19,7 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="切换 placeholder 状态"
+        android:text="Press to change state"
         app:layout_constraintTop_toBottomOf="@+id/placeHolderLayout"
         />
 
