--- a/app/src/main/res/layout/fragment_view_pager_item.xml
+++ b/app/src/main/res/layout/fragment_view_pager_item.xml
@@ -5,12 +5,14 @@
     android:background="#0ff"
     >
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="加载成功状态，点击切换"
+        android:text="Load Success!\nPress to change state"
+        android:gravity="center"
+        android:background="#0aa"
+        android:textSize="20dp"
         />
 
 </FrameLayout>
