--- a/app/src/main/res/layout/layout_image_and_text_place_holder.xml
+++ b/app/src/main/res/layout/layout_image_and_text_place_holder.xml
@@ -2,27 +2,45 @@
 <LinearLayout
     android:id="@+id/place_holder"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     >
 
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="60dp"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/icon_empty"
-        />
+        >
+
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:src="@drawable/icon_empty"
+            />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            app:lottie_loop="true"
+            android:visibility="gone"
+            android:scaleType="fitCenter"
+            />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:textColor="#3b3b3b"
         android:text="@string/empty_tip"
+        android:textColor="#8b8b8b"
         android:textSize="16dp"
         />
 
